# stm32g431xx

./: Cargo.toml  memory.x  move.sh
src/: core.rs  coreutils.rs  drivers.rs  main.rs  system.rs
src/core/: delay.rs
src/drivers/: I2C.rs  SPI.rs  adc.rs  gpio.rs  i2c.rs  lcd_hd44780.rs  serial.rs  uart.rs
src/drivers/gpio/: acts.rs  config.rs  consts.rs  ports.rs
src/drivers/i2c/: actions.rs  portdef.rs  registers_init.rs
src/drivers/uart/: errors.rs  handler.rs  portdef.rs
src/system/: clock_config.rs  interrupts.rs
